# tft_monthly_remainder_forecast

./: .gitignore  AGENTS.md  README.md  generate_synthetic_data.py  pyproject.toml  requirements.txt  test_darts.py
.codex/: config.toml
.codex/agents/: architect.toml  ml.toml
agents/: architect-agent.md  ml-agent.md
configs/: pipeline.yaml
docs/: project-spec.md  technical-assignment.md
docs/superpowers/plans/: 2026-04-05-holdout-city-html-report-implementation.md  2026-04-05-tft-scaling-runtime-fix.md  2026-04-05-weekly-city-darts-runtime-implementation.md  2026-04-06-tft-without-past-covariates.md  2026-04-06-training-device-config.md  2026-04-06-weekly-city-article-notebook-implementation.md
docs/superpowers/specs/: 2026-04-05-darts-first-mvp-runtime-design.md  2026-04-05-holdout-city-html-report-design.md  2026-04-05-weekly-city-darts-runtime-dev-spec-design.md  2026-04-06-weekly-city-article-notebook-design.md
notebooks/: README.md  darts_tft_weekly_city_article.ipynb  test.ipynb  tft_darts_pipeline.ipynb
pipeline/: __init__.py  config.py  data_pipeline.py  inference.py  monitoring.py  run.py  training.py
skills/tft-data-prep/: SKILL.md
skills/tft-data-prep/agents/: openai.yaml
skills/tft-inference-monitoring/: SKILL.md
skills/tft-model-training/: SKILL.md
skills/tft-project-spec/: SKILL.md
tests/: test_article_notebook.py  test_config.py  test_data_pipeline.py  test_inference.py  test_monitoring.py  test_repository_language.py  test_run.py  test_training.py
tests/fixtures/: pipeline_valid.yaml  raw_sales_small.csv
(+7 files in other folders)
