[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly-city-forecast-pipeline"
version = "0.1.0"
description = "MVP runtime for weekly City forecasting with a config-driven pipeline."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "torch>=2.2",
    "lightning>=2.2",
    "pytorch-forecasting>=1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

